Fixed overflowing evolution chain on mobile

--- a/src/ui/components/EvolutionChain/EvolutionChain.module.css
+++ b/src/ui/components/EvolutionChain/EvolutionChain.module.css
@@ -1,7 +1,7 @@
 .container {
   background: url("https://assets.pokemon.com/static2/_ui/img/chrome/body_gray_bg.png");
   margin-top: 30px;
-  padding: 20px;
+  padding: 20px 0;
   border-radius: 10px;
   color: white;
 }
