--- a/src/ui/pages/Details/Details.module.css
+++ b/src/ui/pages/Details/Details.module.css
@@ -29,6 +29,11 @@
   .container > :nth-child(2) > :last-child {
     width: 100%;
   }
+  .container > :nth-child(2) {
+    display: grid;
+    row-gap: 50px;
+    align-content: space-around;
+  }
 }
 
 .container > :nth-child(2) > :first-child > [id="placeholder"] {
