--- a/src/ui/templates/Page/Page.module.css
+++ b/src/ui/templates/Page/Page.module.css
@@ -7,8 +7,7 @@
 .container > :only-child {
   max-width: 1000px;
   width: 90%;
-  min-width: 360px;
+  min-width: 340px;
   margin: 0 auto;
-  overflow: hidden;
   padding: 20px 0;
 }
